--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "author": "svei00 <79055634+svei00@users.noreply.github.com>",
   "license": "MIT",
   "dependencies": {
+    "dotenv": "^16.4.5",
     "express": "^4.18.2",
+    "mongoose": "^8.2.0",
     "nodemon": "^3.1.0"
   }
 }
