--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "svei00 <79055634+svei00@users.noreply.github.com>",
   "license": "MIT",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "dotenv": "^16.4.5",
     "express": "^4.18.2",
     "mongoose": "^8.2.0",
