--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "mongoose": "^8.2.0",
     "nodemon": "^3.1.0",
     "normalize.css": "^8.0.1",
+    "react-helmet": "^6.1.0",
     "redux-persist": "^6.0.0"
   }
 }
