--- a/client/package.json
+++ b/client/package.json
@@ -14,9 +14,10 @@
     "firebase": "^10.8.1",
     "flowbite-react": "^0.7.2",
     "luxon": "^3.4.4",
-    "react": "^18.2.0",
+    "react": "^18.3.1",
     "react-circular-progressbar": "^2.1.0",
-    "react-dom": "^18.2.0",
+    "react-dom": "^18.3.1",
+    "react-helmet-async": "^2.0.5",
     "react-icons": "^5.0.1",
     "react-quill": "^2.0.0",
     "react-redux": "^9.1.0",
