--- a/netlify.toml
+++ b/netlify.toml
@@ -1,12 +1,19 @@
 [
 build
 ]
-  command = "npm run build"
-  publish = "dist"
+  command = "npm run netlify-build"
+  publish = "client/dist"
 
 [[
 redirects
 ]]
   from = "/*"
   to = "/index.html"
+  status = 200
+
+[[
+redirects
+]]
+  from = "/api/*"
+  to = "/.netlify/functions/api/:splat"
   status = 200
