--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "dev": "nodemon api/index.js",
     "start": "node api/index.js",
-    "build": "cd client && npm install && npm run build && cd .. && npm install"
+    "build": "cd client && npm install && npm run build && cd .. && npm install",
+    "netlify-build": "npm run build"
   },
   "repository": "https://github.com/svei00/blogExcelSolutionsV.git",
   "author": "svei00 <79055634+svei00@users.noreply.github.com>",
@@ -21,6 +22,7 @@
     "nodemon": "^3.1.0",
     "normalize.css": "^8.0.1",
     "react-helmet": "^6.1.0",
-    "redux-persist": "^6.0.0"
+    "redux-persist": "^6.0.0",
+    "serverless-http": "^3.2.0"
   }
 }
