--- a/netlify.toml
+++ b/netlify.toml
@@ -1,19 +1,5 @@
 [
 build
 ]
-command = "npm run netlify-build"
+command = "npm run build"
 publish = "client/dist"
-
-[[
-redirects
-]]
-from = "/*"
-to = "/index.html"
-status = 200
-
-[[
-redirects
-]]
-from = "/api/*"
-to = "/.netlify/functions/api/:splat"
-status = 200
