revert Netlify Deploy

--- a/netlify.toml
+++ b/netlify.toml
@@ -1,19 +1,11 @@
-[
-build
-]
-  command = "npm run netlify-build"
-  publish = "client/dist"
+[build]
+  command = "npm run build"
+  publish = "client/dist"  # The correct directory for your Vite build output
 
-[[
-redirects
-]]
+[environment]
+  NETLIFY_NEXT_PLUGIN_SKIP = "true"  # Explicitly disable the Next.js plugin
+
+[[redirects]]
   from = "/*"
   to = "/index.html"
-  status = 200
-
-[[
-redirects
-]]
-  from = "/api/*"
-  to = "/.netlify/functions/api/:splat"
   status = 200
