--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "@reduxjs/toolkit": "^2.2.1",
     "firebase": "^10.8.1",
     "flowbite-react": "^0.7.2",
+    "lucide-react": "^0.454.0",
     "luxon": "^3.4.4",
     "react": "^18.3.1",
     "react-circular-progressbar": "^2.1.0",
