Set up Github Actions for Auto Deplouments v3

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -23,18 +23,18 @@ jobs:
           DEPLOY_SSH_KEY: ${{ secrets.DEPLOY_SSH_KEY }}
           VPS_IP: ${{ secrets.VPS_IP }}
         run: |
-          mkdir -p /home/vefrmeistari/.ssh
-          echo "${{ secrets.DEPLOY_SSH_KEY }}" > /home/vefrmeistari/.ssh/id_ed25519
-          chmod 600 /home/vefrmeistari/.ssh/id_ed25519
+          mkdir -p ~/.ssh
+          echo "${{ secrets.DEPLOY_SSH_KEY }}" > ~/.ssh/id_ed25519
+          chmod 600 ~/.ssh/id_ed25519
 
           # Add VPS to known_hosts
           ssh-keyscan -H ${{ secrets.VPS_IP }} >> ~/.ssh/known_hosts
 
           # SSH into VPS and deploy
-          ssh -o StrictHostKeyChecking=no -i /home/vefrmeistari/.ssh/id_ed25519 vefrmeistari@${{ secrets.VPS_IP }} << 'EOF'
+          ssh -o StrictHostKeyChecking=no -i ~/.ssh/id_ed25519 vefrmeistari@${{ secrets.VPS_IP }} << 'EOF'
             cd /var/www/blogExcelSolutionsV
             git pull origin main
             npm install
-            npm run build
+            NODE_ENV=production npm run build
             pm2 restart your-app-name
           EOF
