Set up Github Actions for Auto Deplouments v5

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,4 +1,4 @@
-name: Deploy Node.js app to AlmaLinux
+name: Deploy Full-Stack App to AlmaLinux
 
 on:
   push:
@@ -16,23 +16,38 @@ jobs:
       - name: Set up Node.js
         uses: actions/setup-node@v2
         with:
-          node-version: "22" # Adjust based on your server's Node.js version
+          node-version: "22" # Recommended stable LTS version for most apps
 
       - name: Deploy to VPS
         env:
           DEPLOY_SSH_KEY: ${{ secrets.DEPLOY_SSH_KEY }}
           VPS_IP: ${{ secrets.VPS_IP }}
         run: |
+          # Set up SSH
           mkdir -p ~/.ssh
           echo "${{ secrets.DEPLOY_SSH_KEY }}" > ~/.ssh/id_ed25519
           chmod 600 ~/.ssh/id_ed25519
-
-          ls -la ~/.ssh
           ssh-keyscan -H ${{ secrets.VPS_IP }} >> ~/.ssh/known_hosts
-          ssh -v -o StrictHostKeyChecking=no -i ~/.ssh/id_ed25519 vefrmeistari@${{ secrets.VPS_IP }} << 'EOF'
+
+          # Deploy code and build the app
+          ssh -i ~/.ssh/id_ed25519 vefrmeistari@${{ secrets.VPS_IP }} << 'EOF'
+            set -e
+            
+            # Navigate to project directory
             cd /var/www/blogExcelSolutionsV
+            
+            # Pull latest code
             git pull origin main
+            
+            # Install backend dependencies
             npm install
-            NODE_ENV=production npm run build
-            pm2 restart your-app-name
+            
+            # Build frontend
+            cd client
+            npm install
+            npm run build
+            cd ..
+
+            # Ensure PM2 restarts the app
+            pm2 restart mern-blog || pm2 start server.js --name mern-blog
           EOF
